--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Portfolio</title>
+  <title>Dani Eichhorn - Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -63,8 +63,9 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Prerak Raja</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h1><a href="index.html">Dani Eichhorn</a></h1>
+      <h2 style="color:#fff">I'm a <span class="typing" style="color:#d61212"></span></h2>
+      <!-- <h3 style="color:#fff">Born with a passion for ICT, Software Development, Music and Multimedia.</h3> -->
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -74,7 +75,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -82,9 +83,9 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="https://www.linkedin.com/in/justdanieichhorn/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.github.com/justdanimusic" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:dani@justdanimusic.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
 
@@ -106,9 +107,8 @@
           <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
+          <p>Hi There! I'm Dani. Over the past 10 years, I have decicated a lot of time in learning and improving the skills from my Hobby's.
+            Ever since I was as young as 6 year old, I have started showing interest in the world of Technology. 
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -697,7 +697,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "AI Enthusiast"],
+      strings: ["Music Producer", "Beginning Developer", "Video/VFX Editor", "ICT Specialist"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
