--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Blast Galaxy B.V</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.blastgalaxy.nl/" style="color:#12d640">Blast Galaxy B.V</a><br> </h4>
                 <h5 style="text-align:left;">September 2023 - October 2024</h5>
                 <p style="text-align:left;color:#fff"><em>(Arcade) Service-Technican</em></p>
                 <ul style="text-align:left;">
@@ -268,7 +268,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Molly's Arena B.V</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.mollys-arena.nl/" style="color:#12d640">Molly's Arena B.V</a><br> </h4>
                 <h5 style="text-align:left;">October 2024 - Present</h5>
                 <p style="text-align:left;color:#fff"><em>(Arcade) Service-Technican. </em></p>
                 <ul style="text-align:left;">
