--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+          <img src="" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Hi There! I'm Dani. Over the past 10 years, I have decicated a lot of time in learning and improving the skills from my Hobby's.
